--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ _Main/assets/models/ShootingStage-new/ShootingStage_D.mtl
 _Main/assets/models/ShootingStage-new/ShootingStage_D.obj
 _Main/assets.zip
 Videos/*
+Versions/GLEA-V1.mp4
