--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,24 @@ _Main/assets/models/ShootingStage-new/ShootingStage_D.obj
 _Main/assets.zip
 Videos/*
 Versions/GLEA-V1.mp4
+x64/Debug/Awaliya.Build.CppClean.log
+x64/Debug/Awaliya.exe.recipe
+x64/Debug/Awaliya.ilk
+x64/Debug/Awaliya.log
+x64/Debug/Awaliya.pdb
+x64/Debug/common.obj
+x64/Debug/GLLog.obj
+x64/Debug/GLShaders.obj
+x64/Debug/OGLMain.obj
+x64/Debug/vc143.idb
+x64/Debug/vc143.pdb
+x64/Debug/Awaliya.tlog/Awaliya.lastbuildstate
+x64/Debug/Awaliya.tlog/CL.command.1.tlog
+x64/Debug/Awaliya.tlog/CL.read.1.tlog
+x64/Debug/Awaliya.tlog/CL.write.1.tlog
+x64/Debug/Awaliya.tlog/link.command.1.tlog
+x64/Debug/Awaliya.tlog/link.read.1.tlog
+x64/Debug/Awaliya.tlog/link.write.1.tlog
+x64/Debug/Awaliya.tlog/rc.command.1.tlog
+x64/Debug/Awaliya.tlog/rc.read.1.tlog
+x64/Debug/Awaliya.tlog/rc.write.1.tlog
