--- a/src/OGLMain.rc
+++ b/src/OGLMain.rc
@@ -2,4 +2,4 @@
 
 MYICON ICON "../assets/textures/matrix_logo.ico"
 
-MYMUSIC WAVE "../assets/audio/audio.wav"
+MYMUSIC WAVE "../assets/audio/audio_3.wav"
