Fixed outro texture

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,5 @@ x64/Debug/Awaliya.tlog/link.write.1.tlog
 x64/Debug/Awaliya.tlog/rc.command.1.tlog
 x64/Debug/Awaliya.tlog/rc.read.1.tlog
 x64/Debug/Awaliya.tlog/rc.write.1.tlog
+Versions/GLEA_उद्भव .mp4
+GLEA_उद्भव_Aishwarya_Kendle.zip
